[gd_scene format=3 uid="uid://b8byq3d2opaqo"]

[ext_resource type="Script" uid="uid://45quitbofu68" path="res://scripts/gallery_template.gd" id="2_rdula"]
[ext_resource type="Material" uid="uid://dfns8uhc1h7mi" path="res://assets/gradient.tres" id="3_rdula"]

[sub_resource type="Image" id="Image_21mpw"]
data = {
"data": PackedByteArray(20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255),
"format": "RGBA8",
"height": 32,
"mipmaps": false,
"width": 32
}

[sub_resource type="ImageTexture" id="ImageTexture_ylnxr"]
image = SubResource("Image_21mpw")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bhtt8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdula"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ylnxr"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="GalleryTemplate" type="PanelContainer" unique_id=302619555]
script = ExtResource("2_rdula")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1196540207]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=420746752]
layout_mode = 2

[node name="Avatar" type="TextureRect" parent="MarginContainer/VBoxContainer" unique_id=2066774899]
material = ExtResource("3_rdula")
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = SubResource("ImageTexture_ylnxr")
expand_mode = 1
stretch_mode = 6

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/Avatar" unique_id=1911392839]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_bhtt8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rdula")
theme_override_styles/hover = SubResource("StyleBoxFlat_ylnxr")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1005409723]
layout_mode = 2
alignment = 1

[node name="Delete" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=627291858]
layout_mode = 2
size_flags_horizontal = 3
text = "Trash
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Avatar/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
